--- a/404.html
+++ b/404.html
@@ -2,17 +2,17 @@
 <html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="UTF-8">
-    <title>Tio Not Found | Hajimari no Kiseki Jisho</title>
-    <link rel="shortcut icon" type="image/x-icon" href="https://sethclydesdale.github.io/hajimari-no-kiseki-jisho/aeon-system/images/tio.ico">
+    <title>Tio Not Found | Kiseki Profile Generator</title>
+    <link rel="shortcut icon" type="image/x-icon" href="https://sethclydesdale.github.io/kiseki-profile-generator/aeon-system/images/tio.ico">
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta property="og:site_name" content="sethclydesdale.github.io">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://sethclydesdale.github.io/hajimari-no-kiseki-jisho/aeon-system/images/social.png">
+    <meta property="og:image" content="https://sethclydesdale.github.io/kiseki-profile-generator/aeon-system/images/social.png">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:creator" content="@SethC1995">
-    <link rel="stylesheet" href="https://sethclydesdale.github.io/hajimari-no-kiseki-jisho/aeon-system/special-style-section.min.css">
+    <link rel="stylesheet" href="https://sethclydesdale.github.io/kiseki-profile-generator/aeon-system/special-style-section.min.css">
     <style>
       /*
         shamelessly lifted from Typing with Mishy which was also lifted from Falcom's site (can you blame me? it's perfect, just like Tio)
@@ -83,25 +83,25 @@
   <body>
     <div id="content">
       <div id="content-inner">
-        <h1 id="logo"><a href="https://sethclydesdale.github.io/hajimari-no-kiseki-jisho/" title="Hajimari no Kiseki Jisho"><img src="https://sethclydesdale.github.io/hajimari-no-kiseki-jisho/aeon-system/images/logo.png" alt="Hajimari no Kiseki Jisho"></a></h1>
+        <h1 id="logo"><a href="https://sethclydesdale.github.io/kiseki-profile-generator/" title="Kiseki Profile Generator"><img src="https://sethclydesdale.github.io/kiseki-profile-generator/aeon-system/images/logo.png" alt="Kiseki Profile Generator"></a></h1>
         
         <div class="columns-2 clear">
-          <div class="column-1"><div style="padding:10px;"><img id="tio-404" src="https://sethclydesdale.github.io/hajimari-no-kiseki-jisho/aeon-system/images/sitting-tio.png"></div></div>
+          <div class="column-1"><div style="padding:10px;"><img id="tio-404" src="https://sethclydesdale.github.io/kiseki-profile-generator/aeon-system/images/sitting-tio.png"></div></div>
           
           <div class="column-2">
             <h2>404 Tio Not Found</h2>
             <p style="font-size:20px;">Sorry, the Tio Tot you're looking for cannot be found.</p>
             <p style="font-size:18px;">お<ruby>探<rt>さが</rt></ruby>しのティオすけは<ruby>見<rt>み</rt></ruby>つかりませんでした。</p>
-            <button class="button menu-opt" onclick="this.querySelector('A').click();"><a href="https://sethclydesdale.github.io/hajimari-no-kiseki-jisho/"></a>Return to the Index / TOPページに戻る</button>
+            <button class="button menu-opt" onclick="this.querySelector('A').click();"><a href="https://sethclydesdale.github.io/kiseki-profile-generator/"></a>Return to the Index / TOPページに戻る</button>
           </div>
         </div>
-        <div id="tio-mishy-404" class="center"><img src="https://sethclydesdale.github.io/hajimari-no-kiseki-jisho/aeon-system/images/sitting-tio-mishy.png"></div>
+        <div id="tio-mishy-404" class="center"><img src="https://sethclydesdale.github.io/kiseki-profile-generator/aeon-system/images/sitting-tio-mishy.png"></div>
       </div>
     </div>
     <script>(function (window, document) {
       // makes corrections to the page if used on the local file system
       if (window.location.protocol == 'file:') {
-        var domain = 'https://sethclydesdale.github.io/hajimari-no-kiseki-jisho/',
+        var domain = 'https://sethclydesdale.github.io/kiseki-profile-generator/',
             a = document.querySelectorAll('a[href*="' + domain + '"], script[src*="' + domain + '"], img[src*="' + domain + '"], link[href*="' + domain + '"], #bg-404'),
             i = 0,
             j = a.length, script;
