--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ if (storageOK && /"lang":"ja"/.test(localStorage.kisekiProfile)) {
       <div id="content-inner">
         <h1 id="logo"><a href="./" title="Kiseki Profile Generator"><img src="aeon-system/images/logo.png" alt="Kiseki Profile Generator"></a></h1>
         <div id="intro-box" class="clear">
-          <p id="intro-bubble"><span class="en">Welcome to the Kiseki Profile Generator.</span><span class="ja">軌跡プロフィールジェネレーターへようこそ。</span><br><span class="en">This website will let you create your own personal Trails Profile that you can share with others.</span><span class="ja">このウェブサイトは、あなたの軌跡プロフィールを作らせます。</span><br><span class="en">Fill in the information below, then click "generate" under the preview to generate your profile.</span><span class="ja">次の情報を書き込んで、プレビューの下の「生成する」をクリックします。</span></p>
+          <p id="intro-bubble"><span class="en">Welcome to the Kiseki Profile Generator.</span><span class="ja">軌跡プロフィールジェネレーターへようこそ。</span><br><span class="en">This website will let you create your own personal Trails Profile that you can share with others.</span><span class="ja">このウェブサイトは、あなたの軌跡プロフィールを作らせます。</span><br><span class="en">Fill in the information below, then click "generate" under the preview to generate your image.</span><span class="ja">次の情報を書き込んで、プレビューの下の「生成する」をクリックします。</span></p>
           <div id="intro-tio-container"><img id="intro-tio" src="aeon-system/images/intro-tio.png" title="めんどくさいです・・・でもがんばります。" onclick="AeonSystem.limitBreak(this);"></div>
           <div id="preload">
             <img src="aeon-system/images/tio-staff.png">
