--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ if (storageOK && /"lang":"ja"/.test(localStorage.kisekiProfile)) {
           <div id="preview-box">
             <div id="template" class="sora-bg en-lang null-gender">
               <div id="kp-lang"></div>
-              <img id="kp-avatar" style="display:none;">
+              <div id="kp-avatar"></div>
               <div id="kp-name" class="text-zone"></div>
               <div id="kp-handle" class="text-zone"></div>
               <div id="kp-gender" class="circle"></div>
