--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ if (storageOK && /"lang":"ja"/.test(localStorage.kisekiProfile)) {
         <h2 id="preview"><span class="en">Preview</span><span class="ja">プレビュー</span></h2>
         <div class="center">
           <div id="preview-box">
-            <div id="template" class="sora-bg en-lang null-gender">
+            <div id="template" class="sora-bg null-gender">
               <div id="kp-lang"></div>
               <div id="kp-avatar"></div>
               <div id="kp-name" class="text-zone"></div>
