update Japanese translation

--- a/contact/index.html
+++ b/contact/index.html
@@ -50,7 +50,7 @@ if (storageOK && /"lang":"ja"/.test(localStorage.kisekiProfile) || /lang=ja/.tes
         <h1 id="logo"><a href="../" title="Kiseki Profile Generator"><img src="../aeon-system/images/logo.png" alt="Kiseki Profile Generator"></a></h1>
         
         <div id="intro-box" class="clear">
-          <p id="intro-bubble"><span class="en">If you have any feedback, bug reports, or questions, please contact the developer via one of the following links.</span><span class="ja">フィードバック、バグとか質問があったら、次のリンクに連絡してください。</span></p>
+          <p id="intro-bubble"><span class="en">If you have any feedback, bug reports, or questions, please contact the developer via one of the following links.</span><span class="ja">フィードバック、バグ、質問とかがあれば、次のリンクに連絡してください。</span></p>
           <div id="intro-tio-container"><img id="intro-tio" src="../aeon-system/images/intro-tio.png" title="めんどくさいです・・・でもがんばります。" onclick="AeonSystem.limitBreak(this);"></div>
           <div id="preload">
             <img src="../aeon-system/images/tio-staff.png">
