update analytics & add adsense

--- a/contact/index.html
+++ b/contact/index.html
@@ -46,7 +46,7 @@ if (storageOK && /"lang":"ja"/.test(localStorage.kisekiProfile) || /lang=ja/.tes
 }
 </script>
     <div id="content">
-      <div id="content-inner">
+      <div id="content-inner" class="clear">
         <h1 id="logo"><a href="../" title="Kiseki Profile Generator"><img src="../aeon-system/images/logo.png" alt="Kiseki Profile Generator"></a></h1>
         
         <div id="intro-box" class="clear">
