--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ if (storageOK && /"lang":"ja"/.test(localStorage.kisekiProfile)) {
         </div>
         
         <div id="button-options">
-          <span class="en"><a class="link-profiles button" href="https://twitter.com/search?q=%23TrailsProfile&src=typed_query&f=live" target="_blank"><i class="fa">&#x1D54F;</i>#TrailsProfile</a></span>
-          <span class="ja"><a class="link-profiles button" href="https://twitter.com/search?q=%23%E8%BB%8C%E8%B7%A1%E3%83%97%E3%83%AD%E3%83%95%E3%82%A3%E3%83%BC%E3%83%AB&src=typed_query&f=live" target="_blank"><i class="fa">&#x1D54F;</i>#軌跡プロフィール</a></span>
+          <span class="en"><a class="link-profiles button" href="https://x.com/search?q=%23TrailsProfile&src=typed_query&f=live" target="_blank"><i class="fa">&#x1D54F;</i>#TrailsProfile</a></span>
+          <span class="ja"><a class="link-profiles button" href="https://x.com/search?q=%23%E8%BB%8C%E8%B7%A1%E3%83%97%E3%83%AD%E3%83%95%E3%82%A3%E3%83%BC%E3%83%AB&src=typed_query&f=live" target="_blank"><i class="fa">&#x1D54F;</i>#軌跡プロフィール</a></span>
           <a id="link-download" class="button" href="aeon-system/template/Kiseki%20Profile%20Templates.zip"><i class="fa">&#xf019;</i><span class="en">Download Templates</span><span class="ja">テンプレートをダウンロードする</span></a>
           <a id="link-contact" class="button" href="contact/"><i class="fa">&#xf1d8;</i><span class="en">Contact</span><span class="ja">連絡する</span></a>
           <a id="link-github" class="button" href="https://github.com/SethClydesdale/kiseki-profile-generator"><i class="fa">&#xf09b;</i>GitHub</a><br>
