fix renne icon not working

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ if (storageOK && /"lang":"ja"/.test(localStorage.kisekiProfile)) {
                 <option value="mueller">Mueller</option>
                 <option value="not-mueller">Not-Mueller</option>
                 <option value="olivier">Olivier</option>
-                <option value="Renne">Renne</option>
+                <option value="renne">Renne</option>
                 <option value="richard">Richard</option>
                 <option value="ries">Ries</option>
                 <option value="scherazard">Scherazard</option>
