add link to agnes style

--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@ if (storageOK && /"lang":"ja"/.test(localStorage.kisekiProfile)) {
           <a id="link-github" class="button" href="https://github.com/SethClydesdale/kiseki-profile-generator"><i class="fa">&#xf09b;</i>GitHub</a><br>
         </div>
         
+        <div id="agnes-style" class="center" style="margin:30px 0;">
+          <a href="https://sethclydesdale.github.io/projects/agnes-style/" target="_blank">
+            <img src="aeon-system/images/agnes-style.jpg" alt="Trails through Daybreak: ~Agnès' Style~" style="max-width:100%;">
+          </a>
+        </div>
+        
         <div id="info-zone">
           <h2 id="info"><span class="en">Profile</span><span class="ja">プロフィール</span></h2>
           <div class="info-row">
